# keszeg-highlighting

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  highlights.scm  indents.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-keszeg.pc.in
bindings/c/tree_sitter/: tree-sitter-keszeg.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_keszeg/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKeszegTests/: TreeSitterKeszegTests.swift
ftdetect/: keszeg.lua
src/: grammar.json  node-types.json  parser.c
